fix overflow

--- a/assets/css/mobile-first.css
+++ b/assets/css/mobile-first.css
@@ -427,7 +427,7 @@ hr {
     }
 
     footer {
-        padding: 20px;
+        padding: 20px 0;
     }
 }
 
